--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -1,6 +1,11 @@
 $font: Helvetica, sans-serif;
 $main-color: blue;
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
 .app {
     font-size: $font;
     color: $main-color;
