--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
+html {
+  height: 100%;
+}
+h1 {
+  margin:0;
+  padding:40px 0 20px 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #74ebd5; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #74ebd5, #acb6e5); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #74ebd5, #acb6e5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 100%;
+  background-repeat: no-repeat;
 }
 
 code {
