--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -4,3 +4,12 @@
     position: relative;
     top: 60;
 }
+
+.error-bar {
+    background-color: red;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    font-size: 12px;
+    padding: 2px;
+}
